@@ -8,6 +8,8 @@ Version 3.5.1
 - for-else constructs are understood better, and don't cause erroneous partial
   branch warnings.  Fixes `issue 122`_.
 
+- Branch coverage for ``with`` statements is improved, fixing `issue 128`_.
+
 - The number of partial branches reported on the HTML summary page was
   different than the number reported on the individual file pages.  This is
   now fixed.
@@ -23,6 +25,7 @@ Version 3.5.1
   See the fullcoverage directory if you are interested.
 
 .. _issue 122: http://bitbucket.org/ned/coveragepy/issue/122/for-else-always-reports-missing-branch
+.. _issue 128: https://bitbucket.org/ned/coveragepy/issue/128/branch-coverage-of-with-statement-in-27
 .. _issue 138: https://bitbucket.org/ned/coveragepy/issue/138/include-should-take-precedence-over-is
 
 
